# django_shop

./: .gitignore  pyproject.toml
conf/: settings.py  urls.py
shop/: admin.py  models.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_product_gallery.py
shop/templates/shop/: category_page.html  index.html
shop/templates/shop/components/: _banner.html  _categories.html  _product_card.html  _services.html  _sort.html  _trending_products.html
shop/templatetags/: shop_tags.py
templates/: base.html
templates/components/: _css.html  _footer.html  _javascript.html  _modal.html  _navbar.html  _style.html
