[tool.poetry]
name = "django-shop"
version = "0.1.0"
description = ""
authors = ["Evgeniy_Borovoy <borovoyevgen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.5"
django-jazzmin = "^3.0.1"
pillow = "^11.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
